--- a/modulo2/package.json
+++ b/modulo2/package.json
@@ -11,9 +11,11 @@
     "connect-flash": "^0.1.1",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "moment": "^2.22.2",
     "multer": "^1.4.1",
     "mysql2": "^1.6.4",
     "nunjucks": "^3.1.4",
+    "nunjucks-date-filter": "^0.1.1",
     "pg": "^7.6.1",
     "sequelize": "^4.41.2",
     "session-file-store": "^1.2.0"
