--- a/modulo4Desafio/package.json
+++ b/modulo4Desafio/package.json
@@ -33,10 +33,11 @@
     "raven": "^2.6.4"
   },
   "devDependencies": {
-    "eslint": "^5.16.0",
+    "eslint": "^5.15.1",
     "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-promise": "^4.0.1",
     "eslint-plugin-standard": "^4.0.0"
   },
   "autoload": {
