--- a/modulo5/package.json
+++ b/modulo5/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.1.1",
     "pg": "^7.9.0",
     "sequelize": "^5.3.5"
   },
